src/objects/LeanData__CC_Inserted_Object__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_Routing_Logic_Key__c</fullName>
        <label>Account Routing Logic Key</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Inserted Objects</relationshipLabel>
        <relationshipName>CC_Inserted_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Campaign_Member__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Campaign Member</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CC Inserted Objects</relationshipLabel>
        <relationshipName>CC_Inserted_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Inserted Objects</relationshipLabel>
        <relationshipName>CC_Inserted_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Convert_Lead__c</fullName>
        <label>Convert Lead</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_Node_JSON__c</fullName>
        <label>Flowbuilder Graph Node JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_Node__c</fullName>
        <label>Flowbuilder Graph Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_Reentry_JSON__c</fullName>
        <label>Flowbuilder Graph Re-Entry JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Immediate_Update__c</fullName>
        <label>Immediate Update</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Match_Relevant_Update__c</fullName>
        <label>Is Match Relevant Update</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Processed__c</fullName>
        <label>Is Processed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Update__c</fullName>
        <label>Is Update</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__L2A_Routing_Status__c</fullName>
        <description>JSON serialized version of L2A routing status for leads</description>
        <label>L2A Routing Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Conversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Conversion Dependency</label>
        <referenceTo>LeanData__Lead_Conversion__c</referenceTo>
        <relationshipLabel>Lead Conversion Dependency</relationshipLabel>
        <relationshipName>Lead_Conversion_Dependency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CC Inserted Objects</relationshipLabel>
        <relationshipName>CC_Inserted_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Old_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Old Account CCIOs</relationshipLabel>
        <relationshipName>Old_Account_CCIOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CC Inserted Objects</relationshipLabel>
        <relationshipName>CC_Inserted_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Order_Timestamp__c</fullName>
        <label>Order Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Parent_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Log</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>CCIO Parent Log</relationshipLabel>
        <relationshipName>CCIO_Parent_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Pending_Action__c</fullName>
        <label>Pending Action</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Primary_Id__c</fullName>
        <label>Primary Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times that Continuous Clean Batch attempts to process this CCIO</description>
        <label>Processing Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processing Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Queued_For_Update__c</fullName>
        <label>Queued for Update</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>CCIO Routing Deployment</relationshipLabel>
        <relationshipName>CCIO_Routing_Deployment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Scheduled_Processing_Time__c</fullName>
        <label>Scheduled Processing Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Serialized_Primary__c</fullName>
        <label>Serialized Primary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Trigger_Edge_Label__c</fullName>
        <label>Trigger Edge Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Triggering_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CCIOS Trigged On Account Change</relationshipLabel>
        <relationshipName>CCIOS_Triggered_On_Account_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Update_Status__c</fullName>
        <defaultValue>&quot;insert&quot;</defaultValue>
        <label>Update Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Updated_Fields__c</fullName>
        <label>Updated Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Updated_Values__c</fullName>
        <label>Updated Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Inserted Object</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Contact__c</columns>
        <columns>LeanData__Is_Processed__c</columns>
        <columns>LeanData__Is_Update__c</columns>
        <columns>LeanData__Is_Match_Relevant_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Inserted Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Inserted Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>